# iesopt-tools

./: .gitignore  README.md  dev_drawio.py  pyproject.toml
src/iesopttools/: __init__.py  plotting.py  result_database.py
src/iesopttools/diagrams/drawio/: __init__.py  components.py  sheet.py  util.py
src/iesopttools/diagrams/layout/: basic.py
src/iesopttools/economics/: grid_cost_calculator.py
src/iesopttools/economics/grid_charge_data/: Netz_NOe_2025.csv  Wiener_Netze_2025.csv
src/iesopttools/plotting/: __init__.py  figure.py  style.py
