[project]
name = "iesopt-tools"
version = "0.1.0"
description = "Tool collection for IESopt"
authors = [
    {name="Stefan Strömer", email="8915976+sstroemer@users.noreply.github.com"}
]
maintainers = [
    {name="Stefan Strömer", email="8915976+sstroemer@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "drawpyo>=0.2.2",
    "duckdb>=1.3.0",
    "iesopt>=2.7.0",
    "matplotlib>=3.10.3",
    "plotly>=6.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iesopttools"]
